<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/ui_cpu_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="20sp" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/time_in_state" />

            <LinearLayout
                android:id="@+id/ui_states_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="10dp" />

            <TextView
                android:id="@+id/ui_states_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#551111"
                android:padding="15dp"
                android:text="@string/no_states_file_found"
                android:textSize="20sp"
                android:visibility="gone" />


            <TextView
                android:id="@+id/ui_header_additional_states"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/unused_cpu_states"
                android:visibility="gone" />

            <TextView
                android:id="@+id/ui_additional_states"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/ui_header_total_state_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/total_state_time" />

            <TextView
                android:id="@+id/ui_total_state_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/kernel_info" />

            <TextView
                android:id="@+id/ui_kernel_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/kernel"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>